vitest_audit2.txt
Failed to parse tsconfig.json for vitest aliases SyntaxError: Expected ':' after property name in JSON at position 417 (line 15 column 14)
    at JSON.parse (<anonymous>)
    at Object.<anonymous> (C:\Users\scott\Documents\GitHub\Reach\vitest.config.ts:52:21)
    at Module._compile (node:internal/modules/cjs/loader:1803:14)
    at _require.extensions.<computed> [as .js] (file:///C:/Users/scott/node_modules/vitest/node_modules/vite/dist/node/chunks/config.js:35919:44)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1547:12)
    at require (node:internal/modules/helpers:152:16)

[1m[46m RUN [49m[22m [36mv4.0.18 [39m[90mC:/Users/scott/Documents/GitHub/Reach[39m

[90mstdout[2m | src/cli/agents-cli.test.ts[2m > [22m[2magents permissions[2m > [22m[2mrequires explicit acceptance on add
[22m[39mAgent local-agent requests permissions fs=false network=false. Re-run with --accept.

[90mstdout[2m | src/cli/agents-cli.test.ts[2m > [22m[2magents permissions[2m > [22m[2mrequires explicit acceptance on add
[22m[39madded local-agent

 [32mΓ£ô[39m src/cli/plugins-cli.test.ts [2m([22m[2m1 test[22m[2m)[22m[32m 6[2mms[22m[39m
[90mstdout[2m | src/cli/agents-cli.test.ts[2m > [22m[2magents permissions[2m > [22m[2mrecommends agents deterministically for a task
[22m[39madded extractor-agent

 [31mΓ¥»[39m src/core/zeolite-core.test.ts [2m([22m[2m0 test[22m[2m)[22m
[90mstdout[2m | src/cli/agents-cli.test.ts[2m > [22m[2magents permissions[2m > [22m[2mrecommends agents deterministically for a task
[22m[39madded cost-agent

{"error":{"code":"ZEO_TRANSCRIPT_FAILED","message":"Cannot find package '@zeo/core' imported from 'C:/Users/scott/Documents/GitHub/Reach/src/cli/transcript-cli.ts'"}}
 [32mΓ£ô[39m src/lib/llm-provider.test.ts [2m([22m[2m11 tests[22m[2m)[22m[32m 20[2mms[22m[39m
 [32mΓ£ô[39m src/cli/agents-cli.test.ts [2m([22m[2m2 tests[22m[2m)[22m[32m 59[2mms[22m[39m
 [31mΓ¥»[39m src/cli/transcript-cli.test.ts [2m([22m[2m1 test[22m[2m | [22m[31m1 failed[39m[2m)[22m[32m 23[2mms[22m[39m
[31m     [31m├ù[31m sign -> verify -> trust record flow[39m[32m 21[2mms[22m[39m
 [32mΓ£ô[39m src/cli/analyze-pr-cli.test.ts [2m([22m[2m2 tests[22m[2m)[22m[32m 25[2mms[22m[39m
 [31mΓ¥»[39m src/cli/workflow-cli.test.ts [2m([22m[2m0 test[22m[2m)[22m
stderr | src/index.test.ts > DecisionEngine > evaluateDecision returns result (async)
WARN: WASM module not found at '../pkg/decision_engine_rs.js'. Using fallback.

stderr | src/index.test.ts > DecisionEngine > DecisionEngine can be manually initialized
WARN: WASM module not found at '../pkg/decision_engine_rs.js'. Using fallback.

stderr | src/index.test.ts > DecisionEngine > falls back to TS implementation if WASM is missing
WARN: WASM module not found at '../pkg/decision_engine_rs.js'. Using fallback.

 [32mΓ£ô[39m src/index.test.ts [2m([22m[2m9 tests[22m[2m)[22m[32m 14[2mms[22m[39m
 [32mΓ£ô[39m src/lib/dashboard-viewmodel.test.ts [2m([22m[2m1 test[22m[2m)[22m[32m 34[2mms[22m[39m
 [32mΓ£ô[39m src/cli/render-cli.test.ts [2m([22m[2m3 tests[22m[2m)[22m[33m 349[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Suites 2 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  src/cli/workflow-cli.test.ts [ src/cli/workflow-cli.test.ts ]
Error: Cannot find package '@zeo/core' imported from 'C:/Users/scott/Documents/GitHub/Reach/src/cli/workflow-cli.ts'
 Γ¥» src/cli/workflow-cli.ts:7:1
      5| import { createInterface } from "node:readline/promises";
      6| import { stdin as input, stdout as output } from "node:process";
      7| import * as core from "@zeo/core";
       | ^
      8| import * as contracts from "@zeo/contracts";
      9| 
 Γ¥» src/cli/workflow-cli.test.ts:6:1

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/3]ΓÄ»

 FAIL  src/core/zeolite-core.test.ts [ src/core/zeolite-core.test.ts ]
Error: Cannot find package '@zeo/core' imported from 'C:/Users/scott/Documents/GitHub/Reach/src/core/zeolite-core.ts'
 Γ¥» src/core/zeolite-core.ts:4:1
      2| import type { DecisionSpec, EvidenceEvent, FinalizedDecisionTranscriptΓÇª
      3| // @ts-ignore - resolve missing core module
      4| import { executeDecision, verifyDecisionTranscript } from "@zeo/core";
       | ^
      5| 
      6| export type ZeoliteOperation =
 Γ¥» src/core/zeolite-core.test.ts:2:1

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/3]ΓÄ»


ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 1 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  src/cli/transcript-cli.test.ts > transcript cli > sign -> verify -> trust record flow
AssertionError: expected 1 to be +0 // Object.is equality

- Expected
+ Received

- 0
+ 1

 Γ¥» src/cli/transcript-cli.test.ts:20:72
     18|       writeFileSync(transcriptPath, JSON.stringify({ decision: "go" })ΓÇª
     19| 
     20|       expect(await runTranscriptCommand(["keygen", "--out", keyPath]))ΓÇª
       |                                                                        ^
     21|       expect(await runTranscriptCommand(["key", "export", "--key", keyΓÇª
     22|       const pub = await (await import("@zeo/core")).exportPublicKeyFroΓÇª

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/3]ΓÄ»


[2m Test Files [22m [1m[31m3 failed[39m[22m[2m | [22m[1m[32m7 passed[39m[22m[90m (10)[39m
[2m      Tests [22m [1m[31m1 failed[39m[22m[2m | [22m[1m[32m29 passed[39m[22m[90m (30)[39m
[2m   Start at [22m 09:02:13
[2m   Duration [22m 1.46s[2m (transform 2.16s, setup 0ms, import 2.45s, tests 530ms, environment 2ms)[22m

